--- a/resources/styles.css
+++ b/resources/styles.css
@@ -2,3 +2,43 @@
 font-family: 'Mohave', sans-serif;
 font-family: 'Titillium Web', sans-serif;
 */
+
+
+
+/*::::::::::::::::::::::::::::::::::::::::
+::::::::::  Mobile Layout CSS  :::::::::::
+::::::::::::::::::::::::::::::::::::::::*/
+
+#task-manager-screen {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    width: 100%;
+    background-color: aliceblue;
+}
+
+
+.task-mgr-header {
+    align-self: center;
+}
+
+
+#task-manager__heading {
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 2.25rem;
+    text-align: center;
+}
+
+
+#task-manager__description {
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 0.85rem;
+    text-align: center;
+}
+
+
+#task-manager__list {
+    min-height: 50vh;
+    margin: auto 0;
+    background-color: #fcefb1;
+}
