implement a way to edit a clicked task.

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -46,6 +46,7 @@ font-family: 'Titillium Web', sans-serif;
 
 
 .task-list__item {
+    display: inline-block;
     width: 100%;
     padding: 2vh 0;
     list-style-type: none;
