--- a/resources/styles.css
+++ b/resources/styles.css
@@ -25,14 +25,14 @@ font-family: 'Titillium Web', sans-serif;
 
 #task-manager__heading {
     font-family: 'Titillium Web', sans-serif;
-    font-size: 2.25rem;
+    font-size: 2rem;
     text-align: center;
 }
 
 
 #task-manager__description {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 0.85rem;
+    font-size: 0.8rem;
     text-align: center;
 }
 
@@ -48,7 +48,7 @@ font-family: 'Titillium Web', sans-serif;
 .task-list__item {
     display: inline-block;
     width: 100%;
-    padding: 2vh 0;
+    padding: 1.75vh 0;
     list-style-type: none;
     background-color: #e4fcb1;
     font-family: 'Mohave', sans-serif;
@@ -67,6 +67,11 @@ font-family: 'Titillium Web', sans-serif;
 }
 
 
-#edit-field {
+#add-task-form label {
+    font-family: 'Titillium Web', sans-serif;
+}
+
+
+#edit-field, #addition-field {
     font-family: 'Mohave', sans-serif;
 }
