work on a way to swap the edit field input with the li's previous text entirely so that the input and the li's text isn't side by side mid-way through editing.

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -63,6 +63,11 @@ font-family: 'Titillium Web', sans-serif;
 }
 
 
+.task-list__item p {
+    display: inline;
+}
+
+
 #add-task-form {
     display: inline-block;
     width: 100%;
