altering edit field color scheme

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -91,6 +91,6 @@ font-family: 'Titillium Web', sans-serif;
 
 
 #edit-field {
-    background-color: #B2A7F1;
-    color: #f5f5f5;
+    background-color: #dedaf9;
+    color: #374243;
 }
