--- a/resources/styles.css
+++ b/resources/styles.css
@@ -69,7 +69,9 @@ font-family: 'Titillium Web', sans-serif;
 
 
 #add-task-form {
-    display: inline-block;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     width: 100%;
     padding: 1.75vh 0;
     background-color: #f1d7a7;
@@ -78,7 +80,7 @@ font-family: 'Titillium Web', sans-serif;
 
 
 #add-task-form label {
-    padding-left: 2.25vw;
+    padding-right: 1.25vw;
     color: #374243;
     font-family: 'Titillium Web', sans-serif;
 }
