--- a/resources/styles.css
+++ b/resources/styles.css
@@ -19,7 +19,10 @@ font-family: 'Titillium Web', sans-serif;
 
 
 .task-mgr-header {
+    width: 100%;
     align-self: center;
+    padding-bottom: 1vh;
+    background-color: #f1d7a7;
 }
 
 
@@ -102,4 +105,13 @@ font-family: 'Titillium Web', sans-serif;
     background-color: #c0ac85;
     color: #f5f5f5;
     font-weight: 600;
+}
+
+
+#task-dashboard {
+    min-height: 10vh;
+    width: 100%;
+    background-color: #c0ac85;
+    border-top: 3px ridge #E6B760;
+    border-bottom: 3px ridge #E6B760;
 }
